--- a/paginawebgas/index.html
+++ b/paginawebgas/index.html
@@ -46,7 +46,7 @@
                 </div>
                 <div class="header__slogan">
                     <h1 class="h__slogan--title">Sabela Trigo</h1>
-                    <h2 class="h__slogan--btn">Infruencer</h2>
+                    <h2 class="h__slogan--btn">Influencer</h2>
                 </div>
             </div>
             <div class="wave wave1"></div>
